@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-09T16:11:09Z",
-  "count" : 5,
-  "count_minmax" : [ 0, 5 ],
+  "timestamp" : "2022-05-10T00:38:53Z",
+  "count" : 13,
+  "count_minmax" : [ 0, 13 ],
   "count_prev_day_inc" : 6,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
